Enhance 02_rag_evaluation.ipynb with additional code cells for model setup, test set generation, and evaluation metrics

--- a/02_rag_evaluation.ipynb
+++ b/02_rag_evaluation.ipynb
@@ -249,10 +249,314 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lc': 1,\n",
+       " 'type': 'constructor',\n",
+       " 'id': ['langchain', 'schema', 'document', 'Document'],\n",
+       " 'kwargs': {'metadata': {'source': 'docs/paul_graham/what_i_worked_on.txt'},\n",
+       "  'page_content': 'What I Worked On\\n\\nFebruary 2021\\n\\nBefore college the two main things I worked on, outside of school, were writing and programming. I didn\\'t write essays. I wrote what beginning writers were supposed to write then, and probably still are: short stories. My stories were awful. They had hardly any plot, just characters with strong feelings, which I imagined made them deep.\\n\\nThe first programs I tried writing were on the IBM 1401 that our school district used for what was then called \"data processing.\" This was in 9th grade, so I was 13 or 14. The school district\\'s 1401 happened to be in the basement of our junior high school, and my friend Rich Draves and I got permission to use it. It was like a mini Bond villain\\'s lair down there, with all these alien-looking machines — CPU, disk drives, printer, card reader — sitting up on a raised floor under bright fluorescent lights.',\n",
+       "  'type': 'Document'}}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0].to_json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.llms import Ollama\n",
+    "from langchain_community.embeddings import OllamaEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/3yg6fdqn0q37hmd96kcp0czh0000gn/T/ipykernel_8142/131304385.py:1: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  generator_llm = Ollama(model=\"phi3:3.8b\")\n",
+      "/var/folders/20/3yg6fdqn0q37hmd96kcp0czh0000gn/T/ipykernel_8142/131304385.py:4: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "  ollama_emb = OllamaEmbeddings(\n"
+     ]
+    }
+   ],
+   "source": [
+    "generator_llm = Ollama(model=\"phi3:3.8b\")\n",
+    "critic_llm = Ollama(model=\"llama3.2:1b\")\n",
+    "\n",
+    "ollama_emb = OllamaEmbeddings(\n",
+    "    model=\"nomic-embed-text\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Ragas' TestsetGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ragas.testset.generator import TestsetGenerator\n",
+    "from ragas.testset.evolutions import simple, reasoning, multi_context\n",
+    "\n",
+    "generator = TestsetGenerator.from_langchain(\n",
+    "    generator_llm=generator_llm,\n",
+    "    critic_llm=critic_llm,\n",
+    "    embeddings=ollama_emb\n",
+    ")\n",
+    "\n",
+    "distribution = {simple: 0.5, reasoning: 0.25, multi_context: 0.25}\n",
+    "testset = generator.generate_with_langchain_docs(documents,\n",
+    "                                                 test_size=10,\n",
+    "                                                 distributions=distribution,\n",
+    "                                                 raise_exceptions=False)\n",
+    "\n",
+    "test_df = testset.to_pandas().dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>question</th>\n",
+       "      <th>contexts</th>\n",
+       "      <th>ground_truth</th>\n",
+       "      <th>evolution_type</th>\n",
+       "      <th>metadata</th>\n",
+       "      <th>episode_done</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>How did the shift to publishing on the web cha...</td>\n",
+       "      <td>[\"Wow, I thought, there's an audience. If I wr...</td>\n",
+       "      <td>The shift to publishing on the web changed the...</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>[{'source': 'paul_graham/what_i_worked_on.txt'...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>How does criticizing a project as a \"toy\" rese...</td>\n",
+       "      <td>[\"[9] You can't usually get paid for doing exa...</td>\n",
+       "      <td>Criticizing a project as a 'toy' is similar to...</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>[{'source': 'paul_graham/how_to_do_great_thing...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>How did the structure of funding startups in b...</td>\n",
+       "      <td>['The deal for startups was based on a combina...</td>\n",
+       "      <td>Funding startups in batches allowed for conven...</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>[{'source': 'paul_graham/what_i_worked_on.txt'...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>How can exploring different topics help in gen...</td>\n",
+       "      <td>[\"Talking or writing about the things you're i...</td>\n",
+       "      <td>Exploring different topics can help in generat...</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>[{'source': 'paul_graham/how_to_do_great_thing...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>How does focusing consistently on something yo...</td>\n",
+       "      <td>[\"The way to beat it is to stop occasionally a...</td>\n",
+       "      <td>Great work happens by focusing consistently on...</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>[{'source': 'paul_graham/how_to_do_great_thing...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  ... episode_done\n",
+       "0           0  ...         True\n",
+       "1           1  ...         True\n",
+       "2           2  ...         True\n",
+       "3           3  ...         True\n",
+       "4           4  ...         True\n",
+       "\n",
+       "[5 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Import the csv file\n",
+    "import pandas as pd\n",
+    "test_df = pd.read_csv(\"./docs/test_data_paul_graham.csv\")\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the RAG pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_response(query_engine, question):\n",
+    "    response = query_engine.query(question)\n",
+    "    return {\n",
+    "        \"answer\": response.response,\n",
+    "        \"contexts\": [c.node.get_content() for c in response.source_nodes],\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 17%|█▋        | 8/47 [01:02<04:40,  7.19s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import Dataset\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "test_questions = test_df[\"question\"].values\n",
+    "\n",
+    "responses = [generate_response(query_engine, q) for q in tqdm(test_questions)]\n",
+    "\n",
+    "dataset_dict = {\n",
+    "    \"question\": test_questions,\n",
+    "    \"answer\": [response[\"answer\"] for response in responses],\n",
+    "    \"contexts\": [response[\"contexts\"] for response in responses],\n",
+    "    \"ground_truth\": test_df[\"ground_truth\"].values.tolist(),\n",
+    "}\n",
+    "\n",
+    "ragas_eval_dataset = Dataset.from_dict(dataset_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "from langchain_community.llms import Ollama\n",
+    "\n",
+    "from ragas import evaluate\n",
+    "from ragas.metrics import (\n",
+    "    faithfulness,\n",
+    "    answer_correctness,\n",
+    "    context_recall,\n",
+    "    context_precision,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [faithfulness, answer_correctness,\n",
+    "           context_recall, context_precision]\n",
+    "\n",
+    "critic_llm = Ollama(model=\"llama3.2:1b\")\n",
+    "\n",
+    "ollama_emb = OllamaEmbeddings(model=\"nomic-embed-text\")\n",
+    "\n",
+    "evaluation_result = evaluate(\n",
+    "    llm=critic_llm,\n",
+    "    embeddings=ollama_emb,\n",
+    "    dataset=ragas_eval_dataset,\n",
+    "    metrics=metrics\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_scores_df = pd.DataFrame(evaluation_result.scores)"
+   ]
   }
  ],
  "metadata": {
