Add image summarization functionality using ollama model

--- a/04_multimodal_rag.ipynb
+++ b/04_multimodal_rag.ipynb
@@ -330,10 +330,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summarize images\n",
+    "import ollama\n",
+    "\n",
+    "def get_image_summary(file_path):\n",
+    "\n",
+    "    response = ollama.chat(\n",
+    "        model='llama3.2-vision',\n",
+    "        messages=[{\n",
+    "            'role': 'user',\n",
+    "            'content': 'Summarize the image:',\n",
+    "            'images': [file_path]\n",
+    "        }]\n",
+    "    )\n",
+    "    return response.message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tqdm import tqdm\n",
+    "image_summaries = [get_image_summary(f\"image_{i+1}.jpeg\") \\\n",
+    "                   for i in tqdm(range(len(images)))]"
+   ]
   }
  ],
  "metadata": {
