--- a/04_multimodal_rag.ipynb
+++ b/04_multimodal_rag.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,13 +231,12 @@
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
-    "image_summaries = [get_image_summary(f\"image_{i+1}.jpeg\") \\\n",
-    "                   for i in tqdm(range(len(images)))]"
+    "image_summaries = [get_image_summary(f\"image_{i+1}.jpeg\") for i in tqdm(range(len(images)))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,17 +247,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summarize texts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_text_summary(text):\n",
+    "\n",
+    "    response = ollama.chat(\n",
+    "        model='llama3.2:1b',\n",
+    "        messages=[{\n",
+    "            'role': 'user',\n",
+    "            'content': f'Summarize this text {text}'\n",
+    "        }]\n",
+    "    )\n",
+    "    \n",
+    "    return response.message.content\n",
+    "\n",
+    "text_summaries = [get_text_summary(texts[i].text) \\\n",
+    "                  for i in tqdm(range(len(texts)))]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summarize texts"
+    "## Summarize tables"
    ]
   },
   {
@@ -284,46 +305,324 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embed summaries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "\n",
+    "def batch_iterate(lst, batch_size):\n",
+    "    for i in range(0, len(lst), batch_size):\n",
+    "        yield lst[i : i + batch_size]\n",
+    "\n",
+    "class EmbedData:\n",
+    "\n",
+    "    def __init__(self, \n",
+    "                 embed_model_name=\"nomic-ai/nomic-embed-text-v1.5\",\n",
+    "                 batch_size=32):\n",
+    "        \n",
+    "        self.embed_model_name = embed_model_name\n",
+    "        self.embed_model = self._load_embed_model()\n",
+    "        self.batch_size = batch_size\n",
+    "        self.embeddings = []\n",
+    "\n",
+    "    def _load_embed_model(self):\n",
+    "        embed_model = HuggingFaceEmbedding(model_name=self.embed_model_name,\n",
+    "                                           trust_remote_code=True,\n",
+    "                                           cache_folder='./hf_cache')\n",
+    "        return embed_model\n",
+    "    \n",
+    "    def generate_embedding(self, context):\n",
+    "        return self.embed_model.get_text_embedding_batch(context)\n",
+    "    \n",
+    "    def embed(self, contexts):\n",
+    "        self.contexts = contexts\n",
+    "        \n",
+    "        for batch_context in tqdm(batch_iterate(contexts, self.batch_size),\n",
+    "                                  total=len(contexts)//self.batch_size,\n",
+    "                                  desc=\"Embedding data in batches\"):\n",
+    "                                  \n",
+    "            batch_embeddings = self.generate_embedding(batch_context)\n",
+    "            \n",
+    "            self.embeddings.extend(batch_embeddings)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "batch_size = 32\n",
+    "\n",
+    "embeddata = EmbedData(batch_size=batch_size)\n",
+    "\n",
+    "embeddata.embed(text_summaries + image_summaries + table_summaries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create vector database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qdrant_client import models\n",
+    "from qdrant_client import QdrantClient\n",
+    "\n",
+    "class QdrantVDB:\n",
+    "\n",
+    "    def __init__(self, collection_name, vector_dim=768, batch_size=512):\n",
+    "        self.collection_name = collection_name\n",
+    "        self.batch_size = batch_size\n",
+    "        self.vector_dim = vector_dim\n",
+    "    \n",
+    "    def define_client(self):\n",
+    "        self.client = QdrantClient(url=\"http://localhost:6333\",\n",
+    "                                   prefer_grpc=True)\n",
+    "    \n",
+    "    def create_collection(self):\n",
+    "        \n",
+    "        if not self.client.collection_exists(collection_name=self.collection_name):\n",
+    "\n",
+    "            self.client.create_collection(collection_name=self.collection_name,\n",
+    "                                          \n",
+    "                                          vectors_config=models.VectorParams(\n",
+    "                                                              size=self.vector_dim,\n",
+    "                                                              distance=models.Distance.DOT,\n",
+    "                                                              on_disk=True),\n",
+    "                                          \n",
+    "                                          optimizers_config=models.OptimizersConfigDiff(\n",
+    "                                                                            default_segment_number=5,\n",
+    "                                                                            indexing_threshold=0)\n",
+    "                                         )\n",
+    "    \n",
+    "    def ingest_data(self, embeddata):\n",
+    "    \n",
+    "        for batch_context, batch_embeddings in tqdm(zip(batch_iterate(embeddata.contexts, self.batch_size), \n",
+    "                                                        batch_iterate(embeddata.embeddings, self.batch_size)), \n",
+    "                                                    total=len(embeddata.contexts)//self.batch_size, \n",
+    "                                                    desc=\"Ingesting in batches\"):\n",
+    "        \n",
+    "            self.client.upload_collection(collection_name=self.collection_name,\n",
+    "                                        vectors=batch_embeddings,\n",
+    "                                        payload=[{\"context\": context} for context in batch_context])\n",
+    "\n",
+    "        self.client.update_collection(collection_name=self.collection_name,\n",
+    "                                    optimizer_config=models.OptimizersConfigDiff(indexing_threshold=20000)\n",
+    "                                    )"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "database = QdrantVDB(\"squad_collection\")\n",
+    "database.define_client()\n",
+    "database.create_collection()\n",
+    "database.ingest_data(embeddata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Retriever class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "class Retriever:\n",
+    "\n",
+    "    def __init__(self, vector_db, embeddata):\n",
+    "        \n",
+    "        self.vector_db = vector_db\n",
+    "        self.embeddata = embeddata\n",
+    "    \n",
+    "    def search(self, query):\n",
+    "        query_embedding = self.embeddata.embed_model.get_query_embedding(query)\n",
+    "            \n",
+    "        # Start the timer\n",
+    "        start_time = time.time()\n",
+    "        \n",
+    "        result = self.vector_db.client.search(\n",
+    "            collection_name=self.vector_db.collection_name,\n",
+    "            \n",
+    "            query_vector=query_embedding,\n",
+    "            \n",
+    "            search_params=models.SearchParams(\n",
+    "                quantization=models.QuantizationSearchParams(\n",
+    "                    ignore=True,\n",
+    "                    rescore=True,\n",
+    "                    oversampling=2.0,\n",
+    "                )\n",
+    "            ),\n",
+    "            \n",
+    "            timeout=1000,\n",
+    "        )\n",
+    "        \n",
+    "        # End the timer\n",
+    "        end_time = time.time()\n",
+    "        elapsed_time = end_time - start_time\n",
+    "\n",
+    "        print(f\"Execution time for the search: {elapsed_time:.4f} seconds\")\n",
+    "\n",
+    "        return result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Retriever(database, embeddata).search(\"Sample query\")[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RAG class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.llms.ollama import Ollama\n",
+    "\n",
+    "class RAG:\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 retriever,\n",
+    "                 llm_name=\"llama3.2:1b\"):\n",
+    "        \n",
+    "        self.llm_name = llm_name\n",
+    "        self.llm = self._setup_llm()\n",
+    "        self.retriever = retriever\n",
+    "        self.qa_prompt_tmpl_str = \"\"\"Context information is below.\n",
+    "                                     ---------------------\n",
+    "                                     {context}\n",
+    "                                     ---------------------\n",
+    "                                     \n",
+    "                                     Given the context information above I want you\n",
+    "                                     to think step by step to answer the query in a\n",
+    "                                     crisp manner, incase case you don't know the\n",
+    "                                     answer say 'I don't know!'\n",
+    "                                     \n",
+    "                                     ---------------------\n",
+    "                                     Query: {query}\n",
+    "                                     ---------------------\n",
+    "                                     Answer: \"\"\"\n",
+    "    \n",
+    "    def _setup_llm(self):\n",
+    "        return Ollama(model=self.llm_name)\n",
+    "    \n",
+    "    def generate_context(self, query):\n",
+    "    \n",
+    "        result = self.retriever.search(query)\n",
+    "        context = [dict(data) for data in result]\n",
+    "        combined_prompt = []\n",
+    "\n",
+    "        for entry in context:\n",
+    "            context = entry[\"payload\"][\"context\"]\n",
+    "\n",
+    "            combined_prompt.append(context)\n",
+    "\n",
+    "        return \"\\n\\n---\\n\\n\".join(combined_prompt)\n",
+    "    \n",
+    "    def query(self, query):\n",
+    "        context = self.generate_context(query=query)\n",
+    "        \n",
+    "        prompt = self.qa_prompt_tmpl_str.format(context=context,\n",
+    "                                                query=query)\n",
+    "        \n",
+    "        response = self.llm.complete(prompt)\n",
+    "        \n",
+    "        return dict(response)['text']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Retriever(database, embeddata).search(\"Sample query\")[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = Retriever(database, embeddata)\n",
+    "\n",
+    "rag = RAG(retriever)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompt text context"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = \"\"\"What are the types of model \n",
+    "           architectures proposed in the paper?\"\"\"\n",
+    "\n",
+    "answer = rag.query(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "display(Markdown(str(answer)))"
+   ]
   }
  ],
  "metadata": {
