Refactor RAG evaluation notebook with Ollama and FastEmbed integration

--- a/02_rag_evaluation.ipynb
+++ b/02_rag_evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,10 @@
     "\n",
     "from llama_index.core import Settings\n",
     "from llama_index.core import PromptTemplate\n",
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.core import StorageContext\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
-    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.embeddings.fastembed import FastEmbedEmbedding\n",
     "from llama_index.core.postprocessor import SentenceTransformerRerank\n",
     "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,25 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    model = \"gpt-4o-mini\",\n",
-    "    request_timeout=120\n",
-    ")\n",
     "\n",
-    "embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-large-en-v1.5\",\n",
-    "                                   trust_remote_code=True)\n",
+    "llm = Ollama(model=\"llama3.2:1b\", request_timeout=120.0)\n",
+    "\n",
+    "embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-large-en-v1.5\")\n",
     "\n",
     "rerank = SentenceTransformerRerank(model=\"BAAI/bge-reranker-base\", top_n=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,12 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Ragas' TestsetGenerator"
+    "## Create Ragas Testset Generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,15 +276,7 @@
     "    generator_llm=generator_llm,\n",
     "    critic_llm=critic_llm,\n",
     "    embeddings=ollama_emb\n",
-    ")\n",
-    "\n",
-    "distribution = {simple: 0.5, reasoning: 0.25, multi_context: 0.25}\n",
-    "testset = generator.generate_with_langchain_docs(documents,\n",
-    "                                                 test_size=10,\n",
-    "                                                 distributions=distribution,\n",
-    "                                                 raise_exceptions=False)\n",
-    "\n",
-    "test_df = testset.to_pandas().dropna()"
+    ")"
    ]
   },
   {
@@ -312,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +310,32 @@
     "        \"answer\": response.response,\n",
     "        \"contexts\": [c.node.get_content() for c in response.source_nodes],\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distribution = {simple: 0.5, reasoning: 0.25, multi_context: 0.25}\n",
+    "\n",
+    "total_distribution = sum(distribution.values())\n",
+    "\n",
+    "if total_distribution != 1:\n",
+    "    raise ValueError(\"The sum of the distribution values must equal 1.\")\n",
+    "\n",
+    "try:\n",
+    "    testset = generator.generate_with_langchain_docs(documents,\n",
+    "                                                 test_size=min(10, len(documents)), # Adjust test_size to not exceed available documents\n",
+    "                                                 distributions=distribution,\n",
+    "                                                 raise_exceptions=False,\n",
+    "                                                 )\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "    print(f\"Debugging logs: {e.debug_logs}\")\n",
+    "\n",
+    "test_df = testset.to_pandas().dropna()"
    ]
   },
   {
@@ -349,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
