--- a/01_basic_setup.ipynb
+++ b/01_basic_setup.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,13 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "DSPy is a programming model designed to abstract and optimize the process of prompting language models (LMs) for natural language processing tasks. It utilizes natural language signatures, which are typed declarations that specify the input and output fields of a function, allowing users to define what a text transformation should accomplish without detailing how to prompt the LM. DSPy includes modules like Predict, ChainOfThought, and others that translate various prompting techniques into reusable functions. This framework enables the creation of self-improving, multi-stage NLP systems using smaller and more efficient LMs, significantly enhancing performance compared to traditional hand-crafted prompts."
+       "DSPy is a programming framework designed to abstract and optimize the process of prompting language models (LMs) for natural language processing tasks. It utilizes natural language signatures, which are typed declarations that specify the input and output fields of a function, allowing users to define what a text transformation should accomplish without detailing how to prompt the LM. DSPy includes modules like Predict, ChainOfThought, and others that facilitate the implementation of these signatures, enabling the creation of self-improving and adaptive NLP systems. The framework aims to enhance the efficiency and effectiveness of LMs, allowing for the development of short programs that can significantly improve performance metrics in various tasks."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
