--- a/07_graphRag.ipynb
+++ b/07_graphRag.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "graph_store = Neo4jPropertyGraphStore(\n",
     "    username=\"neo4j\",\n",
-    "    password=\"Mani_123Neo4j\",\n",
+    "    password=\"\",\n",
     "    url=\"neo4j://localhost:7687\",\n",
     "    timeout=60,\n",
     "    max_connection_pool_size = 50,\n",
